--- a/index.html
+++ b/index.html
@@ -18,7 +18,7 @@
       <nav>
         <a href="#victor">Quienes somos</a>
         <a href="#niveles">Nuestros curos</a>
-        <a href="https://www.instagram.com/victor.blanco_oficial/" target="_blank">Intagram Profesor</a>
+        <a href="/index2.html" target="_blank">Intagram Profesor</a>
       </nav>
     </div>
   </header>
