--- a/index.html
+++ b/index.html
@@ -13,6 +13,34 @@
 <body>
   <!--Comienzo del header-->
   <header>
+    <div class="carrusel">
+      <nav class="navbar navbar-expand-lg navbar-light bg-light">
+        <div class="container-fluid">
+        <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarSupportedContent" aria-controls="navbarSupportedContent" aria-expanded="false" aria-label="Toggle navigation">
+            <span class="navbar-toggler-icon"></span>
+        <a class="navbar-brand" href="#">GitarCosmiC</a>
+        </button>
+            <div class="collapse navbar-collapse" id="navbarSupportedContent">
+                <ul class="navbar-nav me-auto mb-2 mb-lg-0">
+                    <li class="nav-item">
+                        <a class="nav-link active" aria-current="page" href="index.html">Inicio</a>
+                    </li>
+                    <li class="nav-item">
+                        <a class="nav-link" href="#">Cursos</a>
+                    </li>
+                    <li class="nav-item">
+                        <a class="nav-link" href="#">Mis cursos</a>
+                    </li> 
+                </ul>     
+            </div>
+            <div class="iniciar-buscarl">
+                <a href="iniciar.html" class="btn btn-primary btn-sm" >Iniciar sesion</a>
+                <button id="btn-search" class="btn btn-default">🔍</button>
+            </div>
+        </div>
+      </nav>
+    </div>
+
     <div class="container">
       <p class="logo ">Guitar Cosmic</p>
       <nav>
