--- a/index.html
+++ b/index.html
@@ -52,6 +52,18 @@
     </div>
   </header>
   <!-- Fin del header-->
+  <!--buscador-->
+  <section class="buscar">
+    <div id="search-container" style="display: none;">
+        <form class="navbar-form" role="search">
+            <div class="form-group">
+                <input type="text" class="form-control" placeholder="Buscar">
+            </div>
+            <button type="submit" class="btn btn-default">Buscar</button>
+        </form>
+    </div>
+</section>
+
 
   <!--Seccion 1-->
   <section id="hero">
@@ -150,8 +162,10 @@
     </div>
   </footer>
   <!--End Footer-->
-  
+
   <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.0.2/dist/js/bootstrap.bundle.min.js" integrity="sha384-MrcW6ZMFYlzcLA8Nl+NtUVF0sA7MsXsP1UyJoMp4YLEuNSfAP+JcXn/tWtIaxVXM" crossorigin="anonymous"></script>
+  
+  <script src="js/main.js"></script>
 </body>
 
 </html>
