--- a/index.html
+++ b/index.html
@@ -14,7 +14,7 @@
 <body>
   <!--Comienzo del header-->
   <header>
-    <div class="carrusel">
+    <div class="NavBar">
       <nav class="navbar navbar-expand-lg navbar-light bg-light">
         <div class="container-fluid">
         <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarSupportedContent" aria-controls="navbarSupportedContent" aria-expanded="false" aria-label="Toggle navigation">
