--- a/index.html
+++ b/index.html
@@ -14,6 +14,7 @@
 <body>
   <!--Comienzo del header-->
   <header>
+    <!--barra de navegacion-->
     <div class="NavBar">
       <nav class="navbar navbar-expand-lg navbar-light bg-light">
         <div class="container-fluid">
@@ -41,7 +42,6 @@
         </div>
       </nav>
     </div>
-
     <!--buscador-->
   <section class="buscar">
     <div id="search-container" style="display: none;">
