--- a/index.html
+++ b/index.html
@@ -20,7 +20,7 @@
         <div class="container-fluid">
         <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarSupportedContent" aria-controls="navbarSupportedContent" aria-expanded="false" aria-label="Toggle navigation">
             <span class="navbar-toggler-icon"></span>
-        <a class="navbar-brand" href="#">GitarCosmiC</a>
+        <a class="navbar-brand" href="#">GuitarCosmic</a>
         </button>
             <div class="collapse navbar-collapse" id="navbarSupportedContent">
                 <ul class="navbar-nav me-auto mb-2 mb-lg-0">
@@ -36,7 +36,7 @@
                 </ul>     
             </div>
             <div class="iniciar-buscarl">
-                <a href="iniciar.html" class="btn btn-primary btn-sm" >Iniciar sesion</a>
+                <a href="iniciar.html" class="btn btn-primary btn-sm" >Iniciar sesión</a>
                 <button id="btn-search" class="btn btn-default">🔍</button>
             </div>
         </div>
@@ -58,8 +58,8 @@
       <p class="logo ">Guitar Cosmic</p>
       <nav>
         <a href="#victor">Quienes somos</a>
-        <a href="#niveles">Nuestros curos</a>
-        <a href="/index2.html" target="_blank">Intagram Profesor</a>
+        <a href="#niveles">Nuestros cursos</a>
+        <a href="/index2.html" target="_blank">Instagram Profesor</a>
       </nav>
     </div>
   </header>
@@ -69,7 +69,7 @@
 
   <!--Seccion 1-->
   <section id="hero">
-    <h1>Aprende guitarra electrica desde 0!</h1>
+    <h1>¡Aprende guitarra eléctrica desde 0!</h1>
     <form action="https://www.google.com/" target="_blank">
       <button> Registrarse</button>
     </form>
@@ -81,13 +81,13 @@
       <div class="img-container"></div>
       <h2>Somos <span class="subtitulo">Guitar Cosmic</span>
       </h2>
-      <p>Guitar Cosimic es una página creada por 3 desarrollades de software con la finalidad
-        de entregar cursos de forma gratuita acerca de la Guitarra Elétrica para todas las personas del mundo y
+      <p>Guitar Cosmic es una página creada por 3 desarrolladores de software con la finalidad
+        de entregar cursos de forma gratuita acerca de la Guitarra Eléctrica para todas las personas del mundo y
         de todas las edades que no cuenten con el presupuesto suficiente para tomar
-        clases con profesores particulares o en una academia. Esta movitacíon nace desde la filosofía de que todas
-        personas deberían tener el derecho o almenos la oportunidad de aprender a tocar un instrumento musical
+        clases con profesores particulares o en una academia. Esta motivación nace desde la filosofía de que todas las
+        personas deberían tener el derecho o al menos la oportunidad de aprender a tocar un instrumento musical
         sacando lo mejor de cada uno, y quien sabe tal vez
-        llegar a niveles muy altos con sus propias manos,medios y esfuerzo. </p>
+        llegar a niveles muy altos con sus propias manos, medios y esfuerzo. </p>
     </div>
   </section>
 
@@ -100,24 +100,25 @@
       <div class="grados">
         <div class="cursos">
           <h3>Nivel 1</h3>
-          <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Sint repellat nisi dicta repudiandae, optio sequi
-            voluptatem inventore ullam dolore id nemo ipsum neque eius odio voluptatibus molestias rem. Accusamus, odit?
-          </p>
-          <button>+ Info</button>
+          <span class="hide" id="hideText">En el nivel 1 veremos lo más básico del arte de la guitarra, donde veremos la postura con la cual
+            agarrar el instrumento, ademas de algunos acordes fáciles para que comiences a acostumbrarte a los tonos de tu guitarra y un poco
+            de afinación de la misma.
+          </span>
+          <button id="hideText_btn">+ Info</button>
         </div>
         <div class="cursos">
           <h3>Nivel 2</h3>
-          <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Sint repellat nisi dicta repudiandae, optio sequi
+          <span class="hide" id="hideText2">Lorem ipsum dolor sit amet consectetur adipisicing elit. Sint repellat nisi dicta repudiandae, optio sequi
             voluptatem inventore ullam dolore id nemo ipsum neque eius odio voluptatibus molestias rem. Accusamus, odit?
-          </p>
-          <button>+ Info</button>
+          </span>
+          <button id="hideText_btn2">+ Info</button>
         </div>
         <div class="cursos">
           <h3>Nivel 3</h3>
-          <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Sint repellat nisi dicta repudiandae, optio sequi
+          <span class="hide" id="hideText3">Lorem ipsum dolor sit amet consectetur adipisicing elit. Sint repellat nisi dicta repudiandae, optio sequi
             voluptatem inventore ullam dolore id nemo ipsum neque eius odio voluptatibus molestias rem. Accusamus, odit?
-          </p>
-          <button>+ Info</button>
+          </span>
+          <button id="hideText_btn3">+ Info</button>
         </div>
       </div>
     </div>
@@ -140,7 +141,7 @@
 
   <!--Section : Comenzar-->
   <section id="comenzar">
-    <h2>Listo para comenzar?</h2>
+    <h2>¿Listo para comenzar?</h2>
     <button> Registrarse</button>
   </section>
   <!--End Section : Comenzar-->
@@ -155,7 +156,7 @@
         <br>
         Roberto
         <br>
-        Kristian
+        Christian
         <br>
         Víctor
         <br>
