actualizacion good nigth

--- a/index.html
+++ b/index.html
@@ -142,7 +142,7 @@
   <!--Section : Comenzar-->
   <section id="comenzar">
     <h2>¿Listo para comenzar?</h2>
-    <button> Registrarse</button>
+    <button> <a href="registrarse.html">Registrarse</a></button>
   </section>
   <!--End Section : Comenzar-->
 
