--- a/registrarse.html
+++ b/registrarse.html
@@ -1,20 +1,25 @@
+
 <!DOCTYPE html>
 <html lang="en">
 <head>
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Iniciar Sesión</title>
+    <title>Document</title>
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.0.2/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-EVSTQN3/azprG1Anm3QDgpJLIm9Nao0Yz1ztcQTwFspd3yD65VohhpuuCOmLASjC" crossorigin="anonymous">
-
+    <link rel="stylesheet" href="Style/style.css">
 </head>
-<body class="login">
+<body class="register">
     <div class="container">
         <div class="row justify-content-center">
             <div class="col-md-6">
                 <div class="card">
-                    <h1 class="text-center mb-4">Iniciar Sesión</h1>
+                    <h1 class="text-center mb-4">Registro de Usuario</h1>
                     <form>
+                        <div class="mb-3">
+                            <label for="nombre" class="form-label">Nombre completo</label>
+                            <input type="text" class="form-control" id="nombre">
+                        </div>
                         <div class="mb-3">
                             <label for="email" class="form-label">Correo electrónico</label>
                             <input type="email" class="form-control" id="email">
@@ -23,12 +28,16 @@
                             <label for="password" class="form-label">Contraseña</label>
                             <input type="password" class="form-control" id="password">
                         </div>
+                        <div class="mb-3">
+                            <label for="confirmar-password" class="form-label">Confirmar contraseña</label>
+                            <input type="password" class="form-control" id="confirmar-password">
+                        </div>
                         <div class="d-grid gap-2">
-                            <button type="submit" class="btn btn-primary">Iniciar Sesión</button>
+                            <button type="submit" class="btn btn-primary">Registrarse</button>
                         </div>
                     </form>
                     <div class="text-center mt-3">
-                        <a href="#">¿Olvidaste tu contraseña?</a>
+                        <a href="iniciar.html">¿Ya tienes una cuenta? Inicia sesión</a>
                     </div>
                 </div>
             </div>
@@ -36,40 +45,5 @@
     </div>
 
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.0.2/dist/js/bootstrap.bundle.min.js" integrity="sha384-MrcW6ZMFYlzcLA8Nl+NtUVF0sA7MsXsP1UyJoMp4YLEuNSfAP+JcXn/tWtIaxVXM" crossorigin="anonymous"></script>
-    
-    <!--script para agregar lo que deveria ir en main.js pero es muy tarde   se deveria importar el main.js con :   <script src="js/main.js"></script>-->
-    <script>
-        const defaultUser = {
-            email: "usuario@example.com",
-            password: "123456"
-        };
-
-    
-        const emailField = document.getElementById("email");
-        const passwordField = document.getElementById("password");
-
-        emailField.value = defaultUser.email;
-        passwordField.value = defaultUser.password;
-
-
-const form = document.querySelector("form");
-
-form.addEventListener("submit", function(event) {
-
-    event.preventDefault();
-
-    const emailValue = emailField.value;
-    const passwordValue = passwordField.value;
-
-    if (emailValue === defaultUser.email && passwordValue === defaultUser.password) {
-    alert("Inicio de sesión exitoso!");
-
-    window.location.href = "index.html";
-} else {
-    // Mostrar mensaje de error
-    alert("Correo electrónico o contraseña incorrectos. Por favor, inténtalo de nuevo.");
-}
-});
-    </script>
 </body>
 </html>
