good nigth 2.0xdas

--- a/index.html
+++ b/index.html
@@ -71,7 +71,7 @@
   <section id="hero">
     <h1>¡Aprende guitarra eléctrica desde 0!</h1>
     <form action="https://www.google.com/" target="_blank">
-      <button> Registrarse</button>
+      <button><a href="registrarse.html">Registrarse</a></button>
     </form>
   </section>
   
