--- a/registrarse.html
+++ b/registrarse.html
@@ -37,7 +37,7 @@
                         </div>
                     </form>
                     <div class="text-center mt-3">
-                        <a href="iniciar.html">¿Ya tienes una cuenta? Inicia sesión</a>
+                        <a href="iniciar.html">iniciar sesión</a>
                     </div>
                 </div>
             </div>
