--- a/index.html
+++ b/index.html
@@ -36,6 +36,7 @@
                 </ul>     
             </div>
             <div class="iniciar-buscarl">
+              <a href="registrarse.html" class="btn btn-primary btn-sm" >Registrarse</a>
                 <a href="iniciar.html" class="btn btn-primary btn-sm" >Iniciar sesión</a>
                 <button id="btn-search" class="btn btn-default">🔍</button>
             </div>
