--- a/index.html
+++ b/index.html
@@ -6,7 +6,8 @@
   <meta http-equiv="X-UA-Compatible" content="IE=edge">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <link rel="stylesheet" href="/style/style.css">
-  <title>Document</title>
+  <link rel="shortcut icon" href="/media/Nebula/icon.jpg" type="image/x-icon">
+  <title>Guitar-Cosmic</title>
   <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.2.3/dist/css/bootstrap.min.css" rel="stylesheet"
     integrity="sha384-rbsA2VBKQhggwzxH7pPCaAqO46MgnOM80zW1RWuH61DGLwZJEdK2Kadq2F9CUG65" crossorigin="anonymous">
 
@@ -178,7 +179,7 @@
             <h4>Nivel 1</h4>
             <p>En este nivel daras tus primeros pasos</p>
             <hr>
-            <a href="#" class="btn btn-sm btn-primary">click</a>
+            <a href="/nivel-1.html" class="btn btn-sm btn-primary">click</a>
           </div>
         </div>
         <div class="col-sm-12 col-md-4 col-lg-4 py-3">
@@ -187,7 +188,7 @@
             <h4>Nivel 2</h4>
             <p>En este nivel aprenderas armonía</p>
             <hr>
-            <a href="#" class="btn btn-sm btn-primary">click</a>
+            <a href="/nivel-2.html" class="btn btn-sm btn-primary">click</a>
           </div>
         </div>
         <div class="col-sm-12 col-md-4 col-lg-4 py-3">
@@ -196,7 +197,7 @@
             <h4>Nivel 3</h4>
             <p>En este aprenderás técnica avanzada</p>
             <hr>
-            <a href="#" class="btn btn-sm btn-primary">click</a>
+            <a href="/nivel-3.html" class="btn btn-sm btn-primary">click</a>
           </div>
         </div>
       </div>
