--- a/registrarse.html
+++ b/registrarse.html
@@ -11,6 +11,8 @@
     <link rel="stylesheet" href="Style/style.css">
 </head>
 <body class="register">
+    <button type="button" class="btn btn-secondary btn-lg"><a href="index.html">Volver</a></button>
+
     <div class="container">
         <div class="row justify-content-center">
             <div class="col-md-6">
