--- a/iniciar.html
+++ b/iniciar.html
@@ -6,10 +6,11 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Iniciar Sesión</title>
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.0.2/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-EVSTQN3/azprG1Anm3QDgpJLIm9Nao0Yz1ztcQTwFspd3yD65VohhpuuCOmLASjC" crossorigin="anonymous">
-
+    <link rel="stylesheet" href="Style/style.css">
 </head>
 <body class="login">
-    <div class="container">
+    <button type="button" class="btn btn-secondary btn-lg"><a href="index.html">Volver</a></button>
+    <div class="container1">
         <div class="row justify-content-center">
             <div class="col-md-6">
                 <div class="card">
