Botones Show/Hide + footers

--- a/index.html
+++ b/index.html
@@ -223,11 +223,11 @@
           <br>
           -----------------------------------------------------------------------------------------
           <br>
-          Roberto
+          Roberto Diaz
           <br>
-          Christian
+          Christian Cardenas
           <br>
-          Víctor
+          Víctor Blanco
           <br>
           -----------------------------------------------------------------------------------------
         </p>
