--- a/nivel-1.html
+++ b/nivel-1.html
@@ -44,8 +44,11 @@
     <div class="row">
       <div class="col-sm-12 col-md-6">
         <h2>Nivel 1</h2>
-        <p>La página aun está en desarrollo y los videos de las clases muy pronto estarán cargados en linea </p>
-        <a href="https://www.instagram.com/victor.blanco_oficial/" target="_blank" class="readMore">Link de la Clase</a>
+        <p>Nivel básico para aprender guitarra, aprende un poco los fundamentos y la posicion base de tus manos. </p>
+        <input type="checkbox" id="spoiler1"></input>
+        <label for="spoiler1">↓ Tutoriales sencillos ↓</label>
+        <div class="spoiler"><iframe width= "75%" height="350" src="https://www.youtube.com/embed/jkLusfB3iqY?start=1" title="YouTube video player" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture; web-share" allowfullscreen></iframe>
+        <br> <iframe width="75%" height="350" src="https://www.youtube.com/embed/9wTf3SSxMzI?start=1" title="YouTube video player" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture; web-share" allowfullscreen></iframe></div>
       </div>
     </div>
   </div>
@@ -66,5 +69,20 @@
     crossorigin="anonymous"></script>
   </section>
 </body>
-
+<footer>
+  <div class="container-fluid text-center">
+    <p>&copy; Esta página esta sujeta a los derechos de autor del equipo de desarrollo Full Stack
+      <br>
+      -----------------------------------------------------------------------------------------
+      <br>
+      Roberto Diaz
+      <br>
+      Christian Cardenas
+      <br>
+      Víctor Blanco
+      <br>
+      -----------------------------------------------------------------------------------------
+    </p>
+  </div>
+</footer>
 </html>
