--- a/nivel-3.html
+++ b/nivel-3.html
@@ -66,5 +66,20 @@
     crossorigin="anonymous"></script>
   </section>
 </body>
-
+<footer>
+  <div class="container-fluid text-center">
+    <p>&copy; Esta página esta sujeta a los derechos de autor del equipo de desarrollo Full Stack
+      <br>
+      -----------------------------------------------------------------------------------------
+      <br>
+      Roberto Diaz
+      <br>
+      Christian Cardenas
+      <br>
+      Víctor Blanco
+      <br>
+      -----------------------------------------------------------------------------------------
+    </p>
+  </div>
+</footer>
 </html>
