--- a/registrarse.html
+++ b/registrarse.html
@@ -49,4 +49,20 @@
 
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.0.2/dist/js/bootstrap.bundle.min.js" integrity="sha384-MrcW6ZMFYlzcLA8Nl+NtUVF0sA7MsXsP1UyJoMp4YLEuNSfAP+JcXn/tWtIaxVXM" crossorigin="anonymous"></script>
 </body>
+<footer>
+    <div class="container-fluid text-center">
+      <p>&copy; Esta página esta sujeta a los derechos de autor del equipo de desarrollo Full Stack
+        <br>
+        -----------------------------------------------------------------------------------------
+        <br>
+        Roberto Diaz
+        <br>
+        Christian Cardenas
+        <br>
+        Víctor Blanco
+        <br>
+        -----------------------------------------------------------------------------------------
+      </p>
+    </div>
+  </footer>
 </html>
