--- a/iniciar.html
+++ b/iniciar.html
@@ -6,10 +6,11 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Iniciar Sesión</title>
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.0.2/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-EVSTQN3/azprG1Anm3QDgpJLIm9Nao0Yz1ztcQTwFspd3yD65VohhpuuCOmLASjC" crossorigin="anonymous">
-    <link rel="stylesheet" href="Style/style.css">
+    <link rel="stylesheet" href="/Style/style-login.css">
+
 </head>
 <body class="login">
-    <button type="button" class="btn btn-secondary btn-lg"><a href="index.html">Volver</a></button>
+    <button type="button" class="btn btn-primary "><a href="index.html" id="volver">Volver</a></button>
     <div class="container1">
         <div class="row justify-content-center">
             <div class="col-md-6">
@@ -35,6 +36,29 @@
             </div>
         </div>
     </div>
+    <footer>
+        <div class="container-fluid text-center">
+          <p>&copy; Esta página esta sujeta a los derechos de autor del equipo de desarrollo Full Stack
+            <br>
+            -----------------------------------------------------------------------------------------
+            <br>
+            Roberto Diaz
+            <br>
+            Christian Cardenas
+            <br>
+            Víctor Blanco
+            <br>
+            -----------------------------------------------------------------------------------------
+          </p>
+        </div>
+      </footer>
+
+
+
+
+
+
+
 
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.0.2/dist/js/bootstrap.bundle.min.js" integrity="sha384-MrcW6ZMFYlzcLA8Nl+NtUVF0sA7MsXsP1UyJoMp4YLEuNSfAP+JcXn/tWtIaxVXM" crossorigin="anonymous"></script>
     
@@ -73,20 +97,5 @@ form.addEventListener("submit", function(event) {
 });
     </script>
 </body>
-<footer>
-    <div class="container-fluid text-center">
-      <p>&copy; Esta página esta sujeta a los derechos de autor del equipo de desarrollo Full Stack
-        <br>
-        -----------------------------------------------------------------------------------------
-        <br>
-        Roberto Diaz
-        <br>
-        Christian Cardenas
-        <br>
-        Víctor Blanco
-        <br>
-        -----------------------------------------------------------------------------------------
-      </p>
-    </div>
-  </footer>
+
 </html>
