--- a/nivel-1.html
+++ b/nivel-1.html
@@ -15,7 +15,7 @@
 <body>
  <section id="header">
   <div class="container-fluid">
-    <nav class="navbar navbar-expand-lg navbar-dark">
+    <nav class="navbar navbar-expand-lg navbar-dark collapse-active">
       <div class="container">
         <a href="/index.html" class="navbar-brand">Guitar Cosmic</a>
         <button class="navbar-toggler" type="button" data-target="navbarSupportedContenet" data-taggle="collapse" aria-controls="navbarSupportedContenet" aria-expanded="false" aria-label="Toggle Navigation">
