--- a/registrarse.html
+++ b/registrarse.html
@@ -8,7 +8,7 @@
     <link rel="stylesheet" href="/style/stye-resitrarse.css">
     <title>Document</title>
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.0.2/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-EVSTQN3/azprG1Anm3QDgpJLIm9Nao0Yz1ztcQTwFspd3yD65VohhpuuCOmLASjC" crossorigin="anonymous">
-    <link rel="stylesheet" href="Style/style.css">
+    <link rel="stylesheet" href="/Style/style-register.css">
 </head>
 <body class="register">
     <button type="button" class="btn btn-secondary btn-lg"><a href="index.html">Volver</a></button>
@@ -47,22 +47,25 @@
         </div>
     </div>
 
+    <footer>
+        <div class="container-fluid text-center">
+          <p>&copy; Esta página esta sujeta a los derechos de autor del equipo de desarrollo Full Stack
+            <br>
+            -----------------------------------------------------------------------------------------
+            <br>
+            Roberto Diaz
+            <br>
+            Christian Cardenas
+            <br>
+            Víctor Blanco
+            <br>
+            -----------------------------------------------------------------------------------------
+          </p>
+        </div>
+      </footer>
+
+
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.0.2/dist/js/bootstrap.bundle.min.js" integrity="sha384-MrcW6ZMFYlzcLA8Nl+NtUVF0sA7MsXsP1UyJoMp4YLEuNSfAP+JcXn/tWtIaxVXM" crossorigin="anonymous"></script>
 </body>
-<footer>
-    <div class="container-fluid text-center">
-      <p>&copy; Esta página esta sujeta a los derechos de autor del equipo de desarrollo Full Stack
-        <br>
-        -----------------------------------------------------------------------------------------
-        <br>
-        Roberto Diaz
-        <br>
-        Christian Cardenas
-        <br>
-        Víctor Blanco
-        <br>
-        -----------------------------------------------------------------------------------------
-      </p>
-    </div>
-  </footer>
+
 </html>
