--- a/index.html
+++ b/index.html
@@ -5,8 +5,8 @@
   <meta charset="UTF-8">
   <meta http-equiv="X-UA-Compatible" content="IE=edge">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
-  <link rel="stylesheet" href="/style/style.css">
-  <link rel="shortcut icon" href="/media/Nebula/icon.jpg" type="image/x-icon">
+  <link rel="stylesheet" href="Style/style.css">
+  <link rel="shortcut icon" href="media/Nebula/Heart.jpg" type="image/x-icon">
   <title>Guitar-Cosmic</title>
   <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.2.3/dist/css/bootstrap.min.css" rel="stylesheet"
     integrity="sha384-rbsA2VBKQhggwzxH7pPCaAqO46MgnOM80zW1RWuH61DGLwZJEdK2Kadq2F9CUG65" crossorigin="anonymous">
@@ -19,7 +19,7 @@
     <div class="container">
       <nav class="navbar navbar-expand-lg bg-light">
         <div class="container-fluid">
-          <a class="navbar-brand" href="/index.html">Guitar Cosmic</a>
+          <a class="navbar-brand" href="index.html">Guitar Cosmic</a>
           <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarNav"
             aria-controls="navbarNav" aria-expanded="false" aria-label="Toggle navigation">
             <span class="navbar-toggler-icon"></span>
@@ -56,33 +56,33 @@
       <div class="carousel-inner">
 
         <div class="carousel-item active d-item">
-          <img src="/media/Nebula/Heart.jpg" class="d-block w-100 d-img" alt="sliider 1">
+          <img src="media/Nebula/Heart.jpg" class="d-block w-100 d-img" alt="sliider 1">
           <div class="carousel-caption top-0 mt-4">
             <p class="mt-5 fs-2 text-capitalize">
               Bienvenido a Guitar Cosmic
             </p>
             <h1 class="display-1 fw-bolder text-capitalize">Curso online</h1>
-            <form action="/iniciar.html">
+            <form action="Views/iniciar.html">
               <button class="btn btn-primary px-4 py-2 fs-5 mt-5">Iniciar sesion</button>
             </form>
           </div>
         </div>
 
         <div class="carousel-item  d-item">
-          <img src="/media/Nebula/moon.jpg" class="d-block w-100 d-img" alt="sliider 1">
+          <img src="media/Nebula/moon.jpg" class="d-block w-100 d-img" alt="sliider 1">
           <div class="carousel-caption top-0 mt-4">
             <p class="mt-5 fs-2 text-capitalize">
               Bienvenido a Guitar Cosmic
             </p>
             <h1 class="display-1 fw-bolder text.capitalize">Curso online</h1>
-            <form action="/registrarse.html">
+            <form action="Views/registrarse.html">
               <button class="btn btn-primary px-4 py-2 fs-5 mt-5">Registrarse</button>
             </form>
           </div>
         </div>
 
         <div class="carousel-item  d-item">
-          <img src="/media/Nebula/nebula pink.jpg" class="d-block w-100 d-img" alt="sliider 1">
+          <img src="media/Nebula/nebula pink.jpg" class="d-block w-100 d-img" alt="sliider 1">
           <div class="carousel-caption top-0 mt-4">
             <p class="mt-5 fs-2 text-capitalize">
               Bienvenido a Guitar Cosmic
@@ -175,29 +175,29 @@
       <div class="row mt5">
         <div class="col-sm-12 col-md-4 col-lg-4 py-3">
           <div class="card shadow">
-            <img src="/media/Nebula/Heart.jpg" class="card-img-top" alt="1">
+            <img src="media/Nebula/Heart.jpg" class="card-img-top" alt="1">
             <h4>Nivel 1</h4>
             <p>En este nivel daras tus primeros pasos</p>
             <hr>
-            <a href="/nivel-1.html" class="btn btn-sm btn-primary">click</a>
+            <a href="Views/nivel-1.html" class="btn btn-sm btn-primary">click</a>
           </div>
         </div>
         <div class="col-sm-12 col-md-4 col-lg-4 py-3">
           <div class="card shadow">
-            <img src="/media/Nebula/Heart.jpg" class="card-img-top" alt="">
+            <img src="media/Nebula/Heart.jpg" class="card-img-top" alt="">
             <h4>Nivel 2</h4>
             <p>En este nivel aprenderas armonía</p>
             <hr>
-            <a href="/nivel-2.html" class="btn btn-sm btn-primary">click</a>
+            <a href="Views/nivel-2.html" class="btn btn-sm btn-primary">click</a>
           </div>
         </div>
         <div class="col-sm-12 col-md-4 col-lg-4 py-3">
           <div class="card shadow">
-            <img src="/media/Nebula/Heart.jpg" class="card-img-top" alt="">
+            <img src="media/Nebula/Heart.jpg" class="card-img-top" alt="">
             <h4>Nivel 3</h4>
             <p>En este aprenderás técnica avanzada</p>
             <hr>
-            <a href="/nivel-3.html" class="btn btn-sm btn-primary">click</a>
+            <a href="Views/nivel-3.html" class="btn btn-sm btn-primary">click</a>
           </div>
         </div>
       </div>
