--- a/index.html
+++ b/index.html
@@ -62,7 +62,7 @@
               Bienvenido a Guitar Cosmic
             </p>
             <h1 class="display-1 fw-bolder text-capitalize">Curso online</h1>
-            <form action="Views/iniciar.html">
+            <form action="Views/login.html">
               <button class="btn btn-primary px-4 py-2 fs-5 mt-5">Iniciar sesion</button>
             </form>
           </div>
@@ -75,7 +75,7 @@
               Bienvenido a Guitar Cosmic
             </p>
             <h1 class="display-1 fw-bolder text.capitalize">Curso online</h1>
-            <form action="Views/registrarse.html">
+            <form action="Views/register.html">
               <button class="btn btn-primary px-4 py-2 fs-5 mt-5">Registrarse</button>
             </form>
           </div>
