--- a/index-no-log.html
+++ b/index-no-log.html
@@ -62,7 +62,7 @@
               Bienvenido a Guitar Cosmic
             </p>
             <h1 class="display-1 fw-bolder text-capitalize">Curso online</h1>
-            <form action="Views/iniciar.html">
+            <form action="Views/login.html">
               <button class="btn btn-primary px-4 py-2 fs-5 mt-5">Iniciar sesion</button>
             </form>
           </div>
