--- a/index.html
+++ b/index.html
@@ -62,8 +62,8 @@
               Bienvenido a Guitar Cosmic
             </p>
             <h1 class="display-1 fw-bolder text-capitalize">Curso online</h1>
-            <form action="Views/login.html">
-              <button class="btn btn-primary px-4 py-2 fs-5 mt-5">Iniciar sesion</button>
+            <form action="Views/nivel-1.html">
+              <button class="btn btn-primary px-4 py-2 fs-5 mt-5">Tomar Nivel 1</button>
             </form>
           </div>
         </div>
@@ -75,8 +75,8 @@
               Bienvenido a Guitar Cosmic
             </p>
             <h1 class="display-1 fw-bolder text.capitalize">Curso online</h1>
-            <form action="Views/register.html">
-              <button class="btn btn-primary px-4 py-2 fs-5 mt-5">Registrarse</button>
+            <form action="Views/nivel-2.html">
+              <button class="btn btn-primary px-4 py-2 fs-5 mt-5">Tomar Nivel 2</button>
             </form>
           </div>
         </div>
@@ -88,50 +88,10 @@
               Bienvenido a Guitar Cosmic
             </p>
             <h1 class="display-1 fw-bolder text-capitalize">Curso online</h1>
-            <button type="button" class="px-4 py-2 fs-5 mt-5 btn btn-primary" data-bs-toggle="modal"
-              data-bs-target="#miModal">Términos</button>
-
-            <div class="modal fade" id="miModal" tabindex="-1" aria-hidden="true" aria-labelledby="modalTitle"
-              data-bs-backdrop="static">
-              <div class="modal-dialog modal-dialog-centered modal-dialog-scrollable">
-                <div class="modal-content">
-                  <div class="modal-header">
-                    <h5 class="modal-title" id="modalTitle">Términos y política de privacidad</h5>
-                    <button type="button" class="btn-close" data-bs-dismiss="modal" aria-label="Close"></button>
-                  </div>
-
-                  <div class="modal-body">
-                    <p>Bienvenido a nuetro Sitio Web en el cual podás tener la oportunidad de comenzar un nuevo camino
-                      en tu vida, en donde además de aprender a tocar la guitarra eléctrica , aprenderás a como crear
-                      música
-                      por tus propios medios es decir crear tu propia música , genial no?<br>
-                      Para eso te explicaremos un poco acerca de la pótilica con la cual esta desarrollada la
-                      página.<br>
-                      Este sitio web ha sido creado sin fines de lucro sin embargo para nosotros es muy importante
-                      que tu te registres en nuestra página, de esta forma nos harás saber que estamos haciendo bien
-                      nuestro trabajo el cual se enfoca netamente en tu aprendizaje y desarrollo como futuro mÚsico.
-                      <br>
-                      AquÍ encontrarás todas las herramientas necesarias para convertirte en el próximo Jimi Hendrix,
-                      Stevie Ray
-                      Vaughan, Steve Vai , Joe Satriani , Eddie Van Halen , Tom Morello , Guthrie Govan , Eric Clapton ,
-                      BB King
-                      , Eric Jonhson , entre otros guitarristas destacados de la historia de la música moderna. <br>
-                      Pero lo mas importante para nosotros es que con todas estas herramientas seas capaz de encontrar
-                      tu propio
-                      camino y estilo, logrando así conseguir un tono único, asi es este tono es que sale de tus manos.
-                      Asi que anímate ya sabes que hacer solo debes registrarte y con eso contribuirás con un apoyo
-                      tremendo
-                      a esta hermosa comunidad de guitarristas que solo busca crecer a través del mundo entero.
-                    </p>
-                  </div>
-
-                  <div class="modal-footer">
-                    <button type="button" class="btn btn-secondary" data-bs-dismiss="modal">Cerrar</button>
-                    <button type="button" class="btn btn-primary" data-bs-dismiss="modal">Aceptar</button>
-                  </div>
-                </div>
-              </div>
-            </div>
+            <form action="Views/nivel-3.html">
+              <button class="btn btn-primary px-4 py-2 fs-5 mt-5">Tomar Nivel 3</button>
+            </form>
+          
           </div>
         </div>
 
