--- a/index-no-log.html
+++ b/index-no-log.html
@@ -5,6 +5,7 @@
   <meta charset="UTF-8">
   <meta http-equiv="X-UA-Compatible" content="IE=edge">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
+  <meta name="description" content="Bienvenido a Guitar Cosmic en esta página podrás aprender desde 0 a tocar la guitarra ¡Lo único que hace falta es tu motivación! todos pueden participar en este curso por un precio módico ¡Inicia sesión ahora mismo para acceder a nuestros niveles!">
   <link rel="stylesheet" href="Style/style.css">
   <link rel="shortcut icon" href="media/Nebula/Heart.jpg" type="image/x-icon">
   <title>Guitar-Cosmic</title>
