--- a/index-no-log.html
+++ b/index-no-log.html
@@ -5,10 +5,16 @@
   <meta charset="UTF-8">
   <meta http-equiv="X-UA-Compatible" content="IE=edge">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
-  <meta name="description" content="Bienvenido a Guitar Cosmic en esta página podrás aprender desde 0 a tocar la guitarra ¡Lo único que hace falta es tu motivación! todos pueden participar en este curso por un precio módico ¡Inicia sesión ahora mismo para acceder a nuestros niveles!">
   <link rel="stylesheet" href="Style/style.css">
   <link rel="shortcut icon" href="media/Nebula/Heart.jpg" type="image/x-icon">
   <title>Guitar-Cosmic</title>
+
+  <meta name="Author" lang="en" content="Victor Blanco - Roberto Diaz - Cristian">
+  <meta name="keywords" content="HTML , Css , JavaScript , Music">
+  <meta name="description" content="Curso de guitarra electrica">
+  <meta name="copyrigth" content="Copyrigth &copy GuitarCosmic.com">
+  <meta name="robots" content="index-no-log , follow">
+
   <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.2.3/dist/css/bootstrap.min.css" rel="stylesheet"
     integrity="sha384-rbsA2VBKQhggwzxH7pPCaAqO46MgnOM80zW1RWuH61DGLwZJEdK2Kadq2F9CUG65" crossorigin="anonymous">
 
@@ -20,7 +26,7 @@
     <div class="container">
       <nav class="navbar navbar-expand-lg bg-light">
         <div class="container-fluid">
-          <a class="navbar-brand" href="index.html">Guitar Cosmic</a>
+          <a class="navbar-brand" href="/index.html">Guitar Cosmic</a>
           <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarNav"
             aria-controls="navbarNav" aria-expanded="false" aria-label="Toggle navigation">
             <span class="navbar-toggler-icon"></span>
@@ -76,7 +82,7 @@
               Bienvenido a Guitar Cosmic
             </p>
             <h1 class="display-1 fw-bolder text.capitalize">Curso online</h1>
-            <form action="Views/registrarse.html">
+            <form action="Views/register.html">
               <button class="btn btn-primary px-4 py-2 fs-5 mt-5">Registrarse</button>
             </form>
           </div>
