--- a/index.html
+++ b/index.html
@@ -35,6 +35,10 @@
               <li class="nav-item">
                 <a class="nav-link active" href="#niveles">Nuestros cursos</a>
               </li>
+              <li class="nav-item">
+                <a class="nav-link active" href="Views/news.html">Buscador de partituras</a>
+              </li>
+
 
             </ul>
           </div>
