--- a/index.html
+++ b/index.html
@@ -38,6 +38,9 @@
               <li class="nav-item">
                 <a class="nav-link active" href="Views/news.html">Buscador de partituras</a>
               </li>
+              <li class="nav-item">
+                <a class="nav-link active" href="index-no-log.html">Cerrar Sesión</a>
+              </li>
 
 
             </ul>
