--- a/index-no-log.html
+++ b/index-no-log.html
@@ -217,7 +217,7 @@
             <h4>Nivel 3</h4>
             <p>En este aprenderás técnica avanzada
               <br>
-              Preparate porque aqui es donde desarrollaras
+              Prepárate porque aqui es donde desarrollaras
               <br>
               todo lo que esta relacionado a la técnica.
             </p>
