Gracias a usted logramos esto profe

--- a/index-no-log.html
+++ b/index-no-log.html
@@ -9,7 +9,7 @@
   <link rel="shortcut icon" href="media/Nebula/Heart.jpg" type="image/x-icon">
   <title>Guitar-Cosmic</title>
 
-  <meta name="Author" lang="en" content="Victor Blanco - Roberto Diaz - Cristian">
+  <meta name="Author" lang="en" content="Victor Blanco - Roberto Diaz - Cristian Cardenas">
   <meta name="keywords" content="HTML , Css , JavaScript , Music">
   <meta name="description" content="Curso de guitarra electrica">
   <meta name="copyrigth" content="Copyrigth &copy GuitarCosmic.com">
